# Logzilla

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  build.cmd  build.ps1  index.html  lc3.html  live_import_problem_summary.md  package-lock.json  package.json  vite.config.ts
docs/: boundary_bug_fix_plan.md  bug_fix.md
src/: App.tsx  lc3.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/live_import_helper/: Cargo.toml
src-tauri/live_import_helper/src/: main.rs
src-tauri/nucleo-wasm/: Cargo.toml
src-tauri/nucleo-wasm/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config_commands.rs  dcf_commands.rs  file_commands.rs  flash_commands.rs  hci_commands.rs  hci_parser_commands.rs  lc3_commands.rs  live_import_commands.rs  mod.rs  search_commands.rs  serial_commands.rs  usb_audio_commands.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/config/: checksum.rs  editor.rs  mod.rs
src-tauri/src/core/dcf/: parser.rs  writer.rs
src-tauri/src/core/flash/: engine.rs  mod.rs  progress.rs  protocol.rs
src-tauri/src/core/hci/: hci_cmd_table.rs  hci_evt_table.rs  le_subevt_table.rs  llcp_table.rs  lmp_table.rs  mod.rs  parser.rs  types.rs
src-tauri/src/core/lc3/: decoder.rs  export.rs  ffi.rs  importer.rs  mod.rs
src-tauri/src/core/search/: engine.rs  types.rs
src-tauri/src/core/serial/: manager.rs  port.rs
src-tauri/src/core/usb_audio/: descriptors.rs  export.rs  extractor.rs  mod.rs  pcap_reader.rs  usbpcap.rs
src-tauri/src/core/xcfg/: mod.rs  offset.rs  parser.rs  types.rs
(+38 files in other folders)
