[package]
name = "logzilla"
version = "0.0.1"
description = "蓝牙芯片固件烧录工具"
authors = ["you"]
edition = "2021"

[lib]
name = "logzilla_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
winreg = "0.52"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
libloading = "0.8"
nucleo-matcher = "0.3"
regex = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
